[package]
name = "gw2_tp"
version = "0.1.0"
authors = ["Michael X. Grey <grey@openrobotics.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
restson = "^0.7"
serde = "^1.0"
serde_derive = "^1.0"
serde_yaml = "0.8.17"
argparse = "0.2.2"
